--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,11 @@ img {
   width: 90%;
 }
 
+#picture {
+  display:none;
+}
+
+
 .button-wrapper {
   display:flex;
   justify-content: center;
@@ -156,16 +161,13 @@ button {
 
 .quote {
   position:absolute;
-  width:14%;
   top:0%;
-  left:30%;
-  width:40%;
+  left:28%;
+  width:45%;
   font-family: 'Cabin Sketch', cursive;  
   color: white;
-  font-size: 12px;
+  font-size: 16px;
 }
-
-
 
 footer {
   display:flex;
@@ -290,8 +292,61 @@ footer {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+
+h1 {
+  font-size: 60px;
+}
+
+#mobilePic {
+  display:none;
+}
+
+#picture {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.quote {
+  position:absolute;
+  top:15%;
+  left:30%;
+  width:40%;
+  font-family: 'Cabin Sketch', cursive;  
+  color: white;
+  font-size: 30px;
+}
+
+.button-wrapper {
+  width:15%;
+  height:50%;
+}
+
+button {
+  padding:12px;
+  font-size: 25px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 
 @media print,
